--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "preview": "vite preview"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.14",
+        "postcss": "^8.4.21",
         "tailwindcss": "^3.3.1"
     }
 }
